fix(tabs): add gap between tab header items
when tabs header are templated igxSuffix/prefix go outside of the inner container, having no gap will make the user templated ites stack togather

--- a/projects/igniteui-angular/tabs/src/tabs/tabs/header/themes/_base.scss
+++ b/projects/igniteui-angular/tabs/src/tabs/tabs/header/themes/_base.scss
@@ -35,6 +35,7 @@ $theme-variant: map.get($theme, '_meta', 'theme-variant');
         background: var-get($theme, 'item-background');
         color: var-get($theme, 'item-text-color');
         outline: 0;
+	    gap: rem(8px);
 
         igx-icon {
             color: var-get($theme, 'item-icon-color');
